# Jack-n-Junk

./: .gitignore  CMakeLists.txt  README.md
include/: entity.h  game.h  map.h  scene.h
resources/: about.txt
resources/html/: shell.html
src/: entity.c  game.c  main.c  map.c  scene.c
